infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cliniq
  labels:
    app.kubernetes.io/name: cliniq
    app.kubernetes.io/part-of: cliniq-platform
    environment: production
